--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!-- Social Links -->
         <div class="social-links">
             <a href="https://github.com/Blessingchidinma123" target="_blank">GitHub</a>
-            <a href="https://linkedin.com/in/Blessing Chidinma Okpara" target="_blank">LinkedIn</a>
+            <a href="https://linkedin.com/in/Okpara-blessing-businessstrategist" target="_blank">LinkedIn</a>
         </div>
     </div>
 </body>
